# simple-fastapi-sqmodel-async-dotenv-alembic-template

./: README.md  config.py  env-example  main.py  models.py  pyproject.toml
